--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
-<!DOCTYPE HTML>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8/">
-    <meta name="description" content ="Skaryoke web application that takes in
-    a stream of audio, and gives the lyrics to sing along! Comes with a spooky
-    twist!!"/>
-    <meta name="keywords" content="Skaryoke, karioke"/>
-    <base href="http://localhost/html/"/>
-    <link rel="stylesheet" href="styles.css"/>
-    <title>Skaryoke WebApp!</title>
+<!doctype html>
 
-  </head>
-  <body onload="alert('Hello! Welcome to Skaryoke! Please enable your mic so we can hear you!')">
-<div id="wrapper">
-  <noscript>Please Enable JavaScript! We won't do anything bad.. Trust me!</noscript>
-  <h1> Skaryoke!</h1>
-  <h5> ...spooky skary skeletons send shivers down my spine...</h5>
-  <hr>
-  <p>What the fuck did you just fucking say about me, you little bitch? I'll have you know I graduated top of my class in the Navy Seals, and I've been involved in numerous secret raids on Al-Quaeda, and I have over 300 confirmed kills. I am trained in gorilla warfare and I'm the top sniper in the entire US armed forces. <br>You are nothing to me but just another target. I will wipe you the fuck out with precision the likes of which has never been seen before on this Earth, mark my fucking words. <br>You think you can get away with saying that shit to me over the Internet? Think again, fucker. As we speak I am contacting my secret network of spies across the USA and your IP is being traced right now so you better prepare for the storm, maggot. The storm that wipes out the pathetic little thing you call your life. <br>You're fucking dead, kid. I can be anywhere, anytime, and I can kill you in over seven hundred ways, and that's just with my bare hands. Not only am I extensively trained in unarmed combat, but I have access to the entire arsenal of the United States Marine Corps and I will use it to its full extent to wipe your miserable ass off the face of the continent, you little shit. <br> If only you could have known what unholy retribution your little "clever" comment was about to bring down upon you, maybe you would have held your fucking tongue. But you couldn't, you didn't, and now you're paying the price, you goddamn idiot. <br> I will shit fury all over you and you will drown in it. You're fucking dead, kiddo.</p>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
 
+  <title>Scaryoke</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
 
-  </body>
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
 
+</head>
+
+<body>
+  <form>
+    Search:<br>
+    <input type="text" name="song"><br>
+  </form>
+  <script src="js/scripts.js"></script>
+</body>
 </html>
